--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
-
+<% layout('/layouts/boilerplate')%>
 <body>
     <h3>Listings</h3>
     <form method="GET" action="/listings/new">
@@ -21,4 +13,3 @@
     </ul>
 </body>
 
-</html>
