--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,11 @@
 body{
     font-family: "Plus Jakarta Sans", sans-serif !important;
+    display:flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+.container{
+    flex:1;
 }
 
 /* navbar */
@@ -79,4 +85,10 @@ a:hover{
     opacity:0.2;
     background-color: white;
    
+}
+
+/* new page */
+.add-btn{
+    background-color: #fe424d !important;
+    border:none !important;
 }
