--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,3 +92,9 @@ a:hover{
     background-color: #fe424d !important;
     border:none !important;
 }
+
+/* edit page */
+.edit-btn{
+    background-color: #fe424d !important;
+    border:none !important;
+}
