--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -2,7 +2,7 @@
 
   <body>
    
-    <div class="row">
+    <div class="row mt-3">
       <div class="col-8 offset-2">
         <h3>Create a New Listing</h3>
        <br>
@@ -39,8 +39,8 @@
         <label for="location" class="form-label">Location</label>
         <input name="listing[location]" placeholder="Jaipur,Rajasthan" type="text" class="form-control" />
       </div>
-      <button class="btn btn-dark add-btn">Add</button>
-      <br><br>
+      <button class="btn btn-dark add-btn mt-3">Add</button>
+     
     </form>
   </div>
   </div>
