--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,47 +1,62 @@
 <% layout('/layouts/boilerplate')%>
 
   <body>
-   
+
     <div class="row mt-3">
       <div class="col-8 offset-2">
         <h3>Create a New Listing</h3>
-       <br>
-    <form method="POST" action="/listings">
-      <div class="mb-3">
-        <label for="title" class="form-label">Title</label>
-        <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control" />
+        <br>
+        <form method="POST" action="/listings" class="needs-validation" novalidate>
+          <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control" required />
+            <div class="invalid-feedback">
+              Please provide a valid title.
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <textarea name="listing[description]" placeholder="enter description" class="form-control"
+              required></textarea>
+            <div class="invalid-feedback">
+              Please provide a valid description.
+            </div>
+          </div>
 
-      </div>
-      <div class="mb-3">
-        <label for="description" class="form-label">Description</label>
-        <textarea name="listing[description]" placeholder="enter description" class="form-control"></textarea>
-      </div>
+          <div class="mb-3">
+            <label for="image" class="form-label">Image Link</label>
+            <input name="listing[image]" placeholder="enter image URL/Link" type="text" class="form-control" />
+          </div>
 
-      <div class="mb-3">
-        <label for="image" class="form-label">Image Link</label>
-        <input name="listing[image]" placeholder="enter image URL/Link" type="text" class="form-control" />
-      </div>
+          <div class="row">
+            <div class="mb-3 col-md-4">
+              <label for="price" class="form-label">Price</label>
+              <input name="listing[price]" placeholder="1200" type="number" class="form-control" required />
+              <div class="invalid-feedback">
+                Please provide a valid price.
+              </div>
+            </div>
 
-      <div class="row">
-        <div class="mb-3 col-md-4">
-          <label for="price" class="form-label">Price</label>
-          <input name="listing[price]" placeholder="1200" type="number" class="form-control"/>
-        </div>
-  
-        <div class="mb-3 col-md-8">
-          <label for="country" class="form-label">Country</label>
-          <input name="listing[country]" placeholder="India" type="text" class="form-control"/>
-        </div>
-      </div>
+            <div class="mb-3 col-md-8">
+              <label for="country" class="form-label">Country</label>
+              <input name="listing[country]" placeholder="India" type="text" class="form-control" required />
+              <div class="invalid-feedback">
+                Please provide a valid country.
+              </div>
+            </div>
+          </div>
 
-     
-      <div class="mb-3">
-        <label for="location" class="form-label">Location</label>
-        <input name="listing[location]" placeholder="Jaipur,Rajasthan" type="text" class="form-control" />
+
+          <div class="mb-3">
+            <label for="location" class="form-label">Location</label>
+            <input name="listing[location]" placeholder="Jaipur,Rajasthan" type="text" class="form-control" required />
+            <div class="invalid-feedback">
+              Please provide a valid location.
+            </div>
+          </div>
+          <button class="btn btn-dark add-btn mt-3">Add</button>
+
+        </form>
       </div>
-      <button class="btn btn-dark add-btn mt-3">Add</button>
-     
-    </form>
-  </div>
-  </div>
+    </div>
   </body>
