--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -5,7 +5,7 @@
       <div class="col-8 offset-2">
         <h3>Edit your Listing</h3>
         <br>
-        <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" class="needs-validation" novalidate>
+        <form method="POST" action="/listings/<%= listing._id || '' %>?_method=PUT" class="needs-validation" novalidate>
           <div class="mb-3">
             <label for="title" class="form-label">Title</label>
             <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control" required/>
