--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -10,8 +10,8 @@
           <div class="mb-3">
             <label for="title" class="form-label">Title</label>
             <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control" required />
-            <div class="invalid-feedback">
-              Please provide a valid title.
+            <div class="valid-feedback">
+             Looks good!
             </div>
           </div>
           <div class="mb-3">
